--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.13.1",
+    "@clerk/themes": "^2.1.39",
+    "@types/react-table": "^7.7.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
